[tool.poetry]
name = "tiktok"
version = "0.1.0"
description = ""
authors = ["Flexin1981 <7731996+Flexin1981@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
